--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   geolocator: ^13.0.2
   shared_preferences: ^2.5.2
   intl: ^0.20.2
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
@@ -97,3 +98,9 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png" # Ganti dengan path ikon aplikasi kamu
+  adaptive_icon_background: "#ffffff" # Opsional untuk Android (warna background)
+  adaptive_icon_foreground: "assets/logo.png" # Opsional untuk Android
